--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 40px 25px 15px 25px;
+  margin-bottom: 15px;
 }
 
 .screen-header__title {
