--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -30,6 +30,7 @@
 .user-component__avatar--xl {
   width: 80px;
   height: 80px;
+  border-radius: 35px;
 }
 
 .user-component__avatar--sm {
@@ -43,5 +44,18 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.user-component__column--chats span {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-component__column--chats-time {
+  display: flex;
+  justify-content: center;
+  margin: 6px 0px 0px 20px;
+  border-radius: 30px;
 }
