#6.21 Find Screen Part Two
4/19 Study 마감.

--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -9,3 +9,12 @@
   color: white;
   font-weight: 600;
 }
+
+.dot {
+  position: absolute;
+  background-color: tomato;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  right: -5px;
+}
