--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -18,3 +18,11 @@
 .screen-header__icons span {
   margin-left: 25px;
 }
+
+.screen-header__icons {
+  position: relative;
+}
+
+.cog__dotnotification {
+  top: -6px;
+}
