--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,13 +1,15 @@
 .screen-header {
-  /* position: fixed;
+  position: fixed;
   width: 100%;
-  top: 0; */
+  top: 0;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 40px 25px 15px 25px;
   margin-bottom: 15px;
+  background-color: white;
+  z-index: 1;
 }
 
 .screen-header__title {
@@ -25,4 +27,17 @@
 
 .cog__dotnotification {
   top: -6px;
+}
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 2s linear infinite;
 }
