--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -5,7 +5,7 @@
   display: block;
   font-size: 16px;
   margin-bottom: 10px;
-  margin-top: -15px;
+  margin-top: 85px;
 }
 
 #friends-display-link i {
@@ -27,4 +27,29 @@
   display: flex;
   justify-content: space-between;
   color: rgba(0, 0, 0, 0.5);
+}
+
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash-screen {
+  background-color: var(--yellow);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 125px;
+  animation: hideSplashScreen 0.4s ease-in-out forwards;
+  animation-delay: 1s;
 }
