--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,11 +1,11 @@
-.user-component {
-  justify-content: space-between;
-}
-
 .user-component,
 .user-component__column:first-child {
   display: flex;
   align-items: center;
+}
+
+.user-component {
+  justify-content: space-between;
 }
 
 .user-component__avatar {
@@ -13,7 +13,6 @@
   height: 70px;
   border-radius: 30px;
   margin-right: 20px;
-  /* margin: 10px 20px 20px 20px; */
 }
 
 .user-component__title {
@@ -37,13 +36,14 @@
   width: 60px;
   height: 60px;
   border-radius: 25px;
+  object-fit: cover;
 }
 
 .user-component__title--not-bold {
   font-weight: 400;
 }
 
-.user-component__column:last-child {
+.user-component__column--more {
   color: rgba(0, 0, 0, 0.4);
 }
 
