--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,3 +1,7 @@
+#friends-screen {
+  height: 110vh;
+}
+
 #friends-display-link {
   background-color: #fafafa;
   padding: 15px 0px;
@@ -16,17 +20,23 @@
   padding: 0px var(--horizontal-space);
 }
 
-.friends-screen__channel {
+.friends-screen__channel,
+.friends-screen__friends {
   border-top: var(--main-border);
   margin-top: 15px;
   padding-top: 15px;
 }
 
-.friends-screen__channel-header {
+.friends-screen__channel-header,
+.friends-screen__friends-header {
   margin-bottom: 15px;
   display: flex;
   justify-content: space-between;
   color: rgba(0, 0, 0, 0.5);
+}
+
+.friends-screen__friends > .user-component {
+  margin-bottom: 15px;
 }
 
 @keyframes hideSplashScreen {
