--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -20,6 +20,12 @@
   font-size: 18px;
 }
 
+.user-component__title--count {
+  font-weight: 700;
+  font-size: 18px;
+  opacity: 0.4;
+}
+
 .user-component__subtitle {
   margin-top: 8px;
   font-size: 17px;
@@ -36,6 +42,12 @@
   width: 60px;
   height: 60px;
   border-radius: 25px;
+}
+
+.user-component__avatar,
+.user-component__avatar--xl,
+.user-component__avatar--sm {
+  border: 1px solid rgba(0, 0, 0, 0.08);
   object-fit: cover;
 }
 
@@ -58,4 +70,41 @@
   justify-content: center;
   margin: 6px 0px 0px 20px;
   border-radius: 30px;
+}
+
+.user-component__group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 80px;
+  height: auto;
+  margin-right: 20px;
+  margin-left: -2px;
+}
+
+.user-component__avatar__group {
+  width: 30px;
+  height: 30px;
+  border-radius: 13px;
+  object-fit: cover;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+}
+
+.user-component__group img:nth-child(1) {
+  margin-right: 3px;
+}
+
+.user-component__group img:nth-child(2) {
+  margin-left: 3px;
+}
+
+.user-component__group img:nth-child(3) {
+  margin-top: 3px;
+  margin-right: 3px;
+}
+
+.user-component__group img:nth-child(4) {
+  margin-top: 3px;
+  margin-left: 3px;
 }
