--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 @import "components/icon-row.css";
 @import "components/alt-screen-header.css";
 @import "components/no-mobiles.css";
+@import "components/message-animation.css";
 
 /* Screens */
 @import "screens/login.css";
