--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -52,9 +52,9 @@
 #splash-screen {
   background-color: var(--yellow);
   position: absolute;
-  height: 100vh;
+  height: 150vh;
   width: 100vw;
-  top: 0;
+  top: -200px;
   z-index: 10;
   display: flex;
   justify-content: center;
